--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -106,8 +106,9 @@ font:
     # Font family
     #
      Default:
-     style: Bold
+     style: Regular
      family: NotoMono
+     size: 8.0
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
@@ -150,7 +151,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 14.0
+  #size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
