--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -19,26 +19,22 @@ SCRIPT_DIR=/home/anda/.config/i3blocks/scripts
 
 [keyindicator]
 command=$SCRIPT_DIR/keyindicator --hide
-#Allowed keys are CAPS and NUM
 KEY=CAPS
 markup=pango
 interval=once
 signal=11
-#TEXT_ON=CapsLockOn
-#TEXT_OFF=CapsLockOff
-#COLOR_ON=#00FF00
-#COLOR_OFF=#222222
-#BG_COLOR_ON=
-#BG_COLOR_OFF=
+
+[volume]
+command=$SCRIPT_DIR/volume
+LABEL=♪ 
+interval=1
+signal=1
 
 [cpu_usage]
 command=$SCRIPT_DIR/cpu
 interval=1
 LABEL= 
-#min_width=CPU: 100.00%
-#T_WARN=50
-#T_CRIT=80
-#DECIMALS=2
+
 
 [memory]
 command=$SCRIPT_DIR/memory
@@ -48,8 +44,7 @@ interval=30
 [disk]
 command=$SCRIPT_DIR/disk
 LABEL= 
-#DIR=$HOME
-#ALERT_LOW=10
+
 interval=30
 
 [ssid]
@@ -57,72 +52,27 @@ command=$SCRIPT_DIR/ssid
 INTERFACE=wlp2s0
 interval=60
 
-#[iface]
-#command=$SCRIPT_DIR/iface
-#LABEL=wlan0:
-#IFACE=wlan0
-#ADDRESS_FAMILY=inet6?
-#color=#00FF00
-#interval=60
-
 [wlan-dbm]
 command=$SCRIPT_DIR/wlan-dbm
 IFACE=wlp2s0
 interval=5
-#USE_PERCENT=0
 
 [bandwidth3]
 command=$SCRIPT_DIR/bandwidth3
 interval=persist
 markup=pango
-#LABEL=<span font='FontAwesome'>  </span>
-#IFACE=[automatically determined]
-#DT=3
-#UNIT=Mb
-# Exposed variables: rx, wx, tx, unit, iface
-#PRINTF_COMMAND=printf "${LABEL}%-5.1f/%5.1f %s/s\n", rx, wx, unit;
 
 [batterybar]
 command=$SCRIPT_DIR/batterybar
-#label=
 interval=5
 markup=pango
-#min_width=
-# Discharging colors low to high
-#C1=#FF0027
-#C2=#FF3B05
-#C3=#FFB923
-#C4=#FFD000
-#C5=#E4FF00
-#C6=#ADFF00
-#C7=#6DFF00
-#C8=#10BA00
-#CHARGING_COLOR=#00AFE3
-#FULL_COLOR=#FFFFFF
-#AC_COLOR=#535353
 
 [calendar]
 command=$SCRIPT_DIR/calendar
 interval=1
-#LABEL=
-#DATEFMT=+%H:%M:%S
-#SHORTFMT=+%H:%M:%S
 HEIGHT=220
 WIDTH=220
 
 [shutdown_menu]
 full_text=Quit
 command=$SCRIPT_DIR/shutdown_menu
-#FG_COLOR=#bbbbbb
-#BG_COLOR=#111111
-#HLFG_COLOR=#111111
-#HLBG_COLOR=#bbbbbb
-#BORDER_COLOR=#222222
-#ROFI_TEXT=Menu:
-#ROFI_OPTIONS=-width 11 -location 3 -hide-scrollbar -bw 2
-#ZENITY_TITLE=Menu
-#ZENITY_TEXT=Action:
-#ZENITY_OPTIONS=--column= --hide-header
-#ENABLE_CONFIRMATIONS=true (must be true or false)
-#LAUNCHER=rofi (must be rofi or zenity)
-#LOCKSCRIPT=i3lock --color=${BG_COLOR#"#"}
