--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -24,6 +24,12 @@ markup=pango
 interval=once
 signal=11
 
+[microphone]
+command=$SCRIPT_DIR/microphone
+#label=
+interval=1
+color=#FF3333
+
 [volume]
 command=$SCRIPT_DIR/volume
 LABEL=♪ 
