--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -30,6 +30,11 @@ command=$SCRIPT_DIR/microphone
 interval=1
 color=#FF3333
 
+[backlight]
+command=$SCRIPT_DIR/backlight
+label=☀
+interval=1
+
 [volume]
 command=$SCRIPT_DIR/volume
 LABEL=♪ 
