--- a/.config/i3/config
+++ b/.config/i3/config
@@ -32,8 +32,10 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym Mod1+m exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym control+Up exec ~/scripts/increasebacklight.sh 
+bindsym control+Down exec ~/scripts/decreasebacklight.sh 
+#bindsym XF86MonBrightnessUp exec xbacklight -inc 10# increase screen brightness
+#bindsym XF86MonBrightnessDown exec xbacklight -dec 10# decrease screen brightness
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
